--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@aws-amplify/adapter-nextjs": "^1.3.0",
+    "@aws-amplify/ui-react": "^6.7.1",
     "aws-amplify": "^6.10.3",
     "next": "14.2.20",
     "react": "^18",
